@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-28T12:36:25Z",
+  "timestamp" : "2025-03-01T01:37:25Z",
   "count_outdated" : 4651,
   "uniques_outdated" : 2392,
-  "count" : 4687,
-  "uniques" : 2421,
+  "count" : 4690,
+  "uniques" : 2423,
   "clones" : [
     {
       "timestamp": "2025-02-15T00:00:00Z",
@@ -97,12 +97,12 @@
     },
     {
       "timestamp": "2025-02-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
