@@ -1,6 +1,6 @@
 {
-  "count": 36,
-  "uniques": 18,
+  "count": 39,
+  "uniques": 19,
   "clones": [
     {
       "timestamp": "2025-02-15T00:00:00Z",
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2025-02-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
